# void_portal

./: AGENTS.md  Cargo.toml  README.md  agents.md  rustfmt.toml
.cargo/: config.toml
assets/configs/: enemy.ron  global.ron  main.portal.ron  portal.ron  soldier.ron
assets/configs/enemies/: basic.enemy.ron
assets/configs/monsters/: basic.monster.ron
assets/configs/player_npcs/: main.soldier.ron
assets/prefabs/: portal.scn.ron
assets/prefabs/enemies/: goblin.scn.ron
assets/prefabs/items/: elven_bow.scn.ron  iron_sword.scn.ron
assets/prefabs/monsters/: goblin.scn.ron
assets/prefabs/player_npcs/: ranged.scn.ron  soldier.scn.ron
crates/assets/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: components.rs  events.rs  lib.rs  messages.rs  requirements.rs  stats.rs
crates/enemy/: Cargo.toml
crates/enemy/src/: lib.rs  tests_lifecycle.rs
crates/game_core/: Cargo.toml
crates/game_core/src/: lib.rs  tests_integration.rs
crates/items/: Cargo.toml
crates/items/src/: lib.rs
crates/monster_factory/: Cargo.toml
crates/monster_factory/src/: components.rs  lib.rs  systems.rs  tests.rs
crates/monsters/: Cargo.toml
crates/monsters/src/: lib.rs  tests_lifecycle.rs
crates/player_npcs/: Cargo.toml
crates/player_npcs/src/: lib.rs  tests_items.rs  tests_logic.rs  tests_timing.rs
crates/player_npcs_ui/: Cargo.toml
crates/player_npcs_ui/src/: lib.rs
crates/portal/: Cargo.toml
crates/portal/src/: components.rs  config.rs  lib.rs  tests_mechanics.rs
crates/soldier/: Cargo.toml
crates/soldier/src/: lib.rs  tests_logic.rs  tests_timing.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  portal_panel.rs
crates/vfx/: Cargo.toml
crates/vfx/src/: lib.rs  tests.rs
crates/void_assets/: Cargo.toml
crates/void_assets/src/: lib.rs
crates/void_components/: Cargo.toml
crates/void_components/src/: common.rs  enemy.rs  lib.rs  portal.rs  soldier.rs  ui.rs
crates/void_core/: Cargo.toml
crates/void_core/src/: config.rs  events.rs  lib.rs
crates/void_gameplay/: Cargo.toml
crates/void_gameplay/src/: configs.rs  lib.rs  portal.rs  soldier.rs  test_events.rs  test_portal_mechanics.rs  test_soldier.rs  test_soldier_attack_timing.rs  tests.rs
crates/void_ui/: Cargo.toml
crates/void_ui/src/: lib.rs  portal_panel.rs
crates/void_wallet/: Cargo.toml
crates/void_wallet/src/: lib.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: lib.rs
src/: main.rs
