[package]
name = "void_portal"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
void_core = { path = "crates/void_core" }
void_assets = { path = "crates/void_assets" }
void_ui = { path = "crates/void_ui" }
void_gameplay = { path = "crates/void_gameplay" }
void_wallet = { path = "crates/void_wallet" }

# Enable dynamic linking for faster compile times in development
[features]
default = ["bevy/dynamic_linking"]

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
bevy = "0.17"
