[package]
name = "void_portal"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
game_core = { path = "crates/game_core" }

# Enable dynamic linking for faster compile times in development
[features]
default = ["bevy/dynamic_linking"]

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
bevy = "0.17"
