[package]
name = "game_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
common = { path = "../common" }
assets = { path = "../assets" }
wallet = { path = "../wallet" }
ui = { path = "../ui" }
portal = { path = "../portal" }
player_npcs = { path = "../player_npcs" }
enemy = { path = "../enemy" }
items = { path = "../items" }
