[package]
name = "player_npcs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
common = { path = "../common" }
portal = { path = "../portal" }
enemy = { path = "../enemy" }
serde = { version = "1.0", features = ["derive"] }
bevy_common_assets = { version = "0.14", features = ["ron"] }
