[package]
name = "portal"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
common = { path = "../common" }
monsters = { path = "../monsters" }
wallet = { path = "../wallet" }
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.2"
bevy_common_assets = { version = "0.14", features = ["ron"] }
monster_factory = { path = "../monster_factory" }
