[package]
name = "void_gameplay"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
void_core = { path = "../void_core" }
void_assets = { path = "../void_assets" }
rand = "0.9.2"
serde = { version = "1", features = ["derive"] }
bevy_common_assets = { version = "0.14", features = ["ron"] }
